--- a/index.css
+++ b/index.css
@@ -75,8 +75,8 @@ body {
 
 .body {
   width: 100%;
-  overflow: hidden;
-  overflow-y: scroll;
+  /* overflow: hidden;
+  overflow-y: scroll; */
 }
 
 .menu {
