--- a/index.css
+++ b/index.css
@@ -438,6 +438,7 @@ body {
   justify-content: flex-start;
   align-items: center;
   width: min-content;
+  min-width: 750px;
 }
 
 .faceItemImg {
@@ -758,6 +759,10 @@ body {
     line-height: 41px;
   }
 
+  .faceItem {
+    min-width: unset;
+  }
+
   .menu {
     height: 41px;
     padding: 0 50px;
@@ -784,6 +789,9 @@ body {
 }
 
 @media only screen and (max-width: 868px) {
+  .faceItem {
+    min-width: 600px;
+  }
   .itemLast {
     margin-bottom: 0;
   }
@@ -1045,6 +1053,9 @@ body {
     height: 482px;
     z-index: -1;
     right: -15px;
+  }
+  .faceItem {
+    min-width: 300px;
   }
 }
 
