--- a/pop-up/pop-up.css
+++ b/pop-up/pop-up.css
@@ -317,7 +317,7 @@ body {
   background: transparent;
 }
 
-.popUpAnswerOptionsItemAnswered .popUpCircle div {
+/* .popUpAnswerOptionsItemAnswered .popUpCircle div {
   width: 12px;
   height: 12px;
   margin-left: 4px;
@@ -326,7 +326,7 @@ body {
   border-radius: 100px;
   box-sizing: border-box;
   box-shadow: 0px 2.75px 2.75px rgba(0, 0, 0, 0.25);
-}
+} */
 
 .popUpAnswerPercent {
   border-radius: 100px;
@@ -443,12 +443,12 @@ body {
     margin: 0 auto 20px;
   }
 
-  .popUpAnswerOptionsItemAnswered .popUpCircle div {
+  /* .popUpAnswerOptionsItemAnswered .popUpCircle div {
     width: 9px;
     height: 9px;
     margin-left: 2px;
     margin-top: 2px;
-  }
+  } */
 
   .popUpBG {
     display: none;
