--- a/index.css
+++ b/index.css
@@ -621,8 +621,9 @@ body {
   width: 100%;
   position: fixed;
   overflow: hidden;
-  box-shadow: inset 0 0 0 100000px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 0 0 100000px rgba(0, 0, 0, 0.45);
   z-index: 1000;
+  background: url(./images/top-bg.png) no-repeat center center / cover;
 }
 
 .popUpINDEXInside {
